# compsel

./: .gitignore  buildManifesto.json  compSel.py
repo/branches/branch_comp_x/App/compX/: compX.c
repo/branches/branch_comp_x/App/compZ/: compZ.c
repo/branches/branch_comp_y/App/compX/: compX.h
repo/branches/branch_comp_y/App/compY/: compY.c
repo/branches/branch_comp_z/App/compX/: compX.c
repo/branches/branch_comp_z/App/compY/: compY.c  compY.h
repo/branches/branch_comp_z/App/compZ/: compZ.c  compZ.h
repo/tools/: clean_repo.sh
repo/trunk/: CMakeLists.txt  main.c
repo/trunk/App/: CMakeLists.txt
repo/trunk/App/compX/: compX.c
repo/trunk/App/compY/: compY.c
repo/trunk/App/compZ/: compZ.c
